# device-sdk-c

./: Makefile
include/devsdk/: devsdk-base.h  devsdk.h
scripts/: build-test.sh
src/c/: command.c  command.h  config.c  config.h  device.c  device.h  edgex-rest.c  edgex-rest.h  service.c
src/c/examples/: CMakeLists.txt
src/c/examples/commandclient/: CMakeLists.txt  README.md  device-cmdclient.c
src/c/examples/commandclient/res/: configuration.yaml
src/c/examples/commandclient/res/devices/: Commanddevice.json
src/c/examples/commandclient/res/profiles/: cmdclient.json
src/c/examples/counters/: device-counter.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  command_client_test.c
tests/unit/: CMakeLists.txt
